# mimosa

./: .gitignore  .goreleaser.yml  .pre-commit-config.yaml  .tool-versions  CONTRIBUTING.md  LICENSE  README.md  go.mod  go.sum  main.go  mise.toml  pyproject.toml
.github/: .codecov.yml
.github/workflows/: cleanup-ghcr.yml  example-confirmer.yml  example-github-action.yml  gcp.yml  main.yml
.mise-tasks/: cleanup-tests  init  init-go  init-python  init-tests  install-pre-commit  integration-tests  local-init  test  unit-tests
.mise-tasks/init/: local  node  pre-commit
.mise-tasks/tests/: cleanup  init  integration  unit
cmd/: cache.go  flags.go  forget.go  remember.go  root.go  version.go
cmd/mimosa/: init.go  main.go
docs/gh-actions/: README.md  example-github-action.yml
scripts/: bundle-gh-action.sh
tests-e2e/: .gitignore  pyproject.toml
tests-e2e/1. simple/: test.sh
tests-e2e/2. dockerignore/: .dockerignore  test.sh
tests-e2e/3. dockerfile-not-in-context/: test.sh
tests-e2e/4. multiple-docker-ignore/: .dockerignore  test.sh
tests-e2e/5. retag-only/: Dockerfile  test.sh
tests-e2e/multiple-build-contexts/backend/: .dockerignore  credentials.json  server.js
tests-e2e/multiple-build-contexts/frontend/: .dockerignore  app.js  config.js
tests-e2e/tests/: buildx-build.py  conftest.py
tests-e2e/utils/: directory_tree.py  docker_registry.py  scaffolder.py  test_runner.py
tests-e2e/utils/test-cases/: docker-buildx-build.yaml
tests-integration/: command_creator.py  docker.py  run_tests.py  test_creator.py  test_setup.py
(+106 files in other folders)
