[project]
name = "mimosa"
version = "0.0.0"          # pyproject used only for maintaining python deps - version here does not matter
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.2.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.1",
    "requests>=2.32.5",
]

[tool.uv]
required-version = ">=0.9.0"